# SellerBot

./: CMakeLists.txt  CMakeUserPresets.json  README.md  database-docker-win.bat  main.cpp  vcpkg.json
Bot/: Bot.cpp  Bot.h
DataBase/: DataBase.cpp  DataBase.h
Product/: Product.cpp  Product.h
State/: State.h
States/Cart/: CartState.cpp  CartState.h
States/Catalog/: CatalogState.cpp  CatalogState.h
States/Category/: CategoryState.cpp  CategoryState.h
States/CheckOut/: CheckOutState.cpp  CheckOutState.h
States/MainMenu/: MainMenuState.cpp  MainMenuState.h
